fixed overflow

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -6,9 +6,11 @@
 }
 #root {
 	width: 100%;
+	height: 100%;
 	box-sizing: border-box;
 }
 body {
+	/* overflow: hidden; */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -28,7 +30,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	box-sizing: border-box;
-	height: 100vh;
+	height: 100%;
 	width: 100%;
 	align-items: center;
 	justify-content: flex-start;
@@ -258,4 +260,26 @@ h3 span {
 	.card p {
 		font-size: 15px;
 	} */
+}
+@media screen and (max-height: 500px) {
+	.main {
+		display: flex;
+		flex-direction: column;
+		justify-content: space-evenly;
+		align-items: center;
+	}
+	#condition,
+	.other-information,
+	.temperature-information {
+		display: none;
+	}
+
+	.temperature-degree {
+		display: contents;
+	}
+}
+@media screen and (max-height: 250px) {
+	#disclaimer {
+		display: none;
+	}
 }
